Skip to content

1.2 regression: screen:// assertion failure

./vlc -vv screen://

[0x836d794] xdg_screensaver inhibit debug: started xdg-screensaver (PID = 17272)
[0x83679d4] xcb_x11 generic debug: connected to X11.0 server
[0x83679d4] xcb_x11 generic debug:  vendor : The X.Org Foundation
[0x83679d4] xcb_x11 generic debug:  version: 10502000
[0x83679d4] xcb_x11 generic debug: using screen 0x1a6
[0x83679d4] xcb_x11 generic debug: X11 visual with alpha-channel not supported
[0x83679d4] xcb_x11 generic debug: using X11 visual ID 0x21
[0x83679d4] xcb_x11 generic debug:  24 bits depth
[0x83679d4] xcb_x11 generic debug:  32 bits per pixel
[0x83679d4] xcb_x11 generic debug:  32 bits line pad
[0x83679d4] xcb_x11 generic debug: using X11 window 08000000
[0x83679d4] xcb_x11 generic debug: using X11 graphic context 08000001
[0x83679d4] main generic debug: VoutDisplayEvent 'fullscreen' 0
[0x83679d4] main generic debug: VoutDisplayEvent 'resize' 1270x883 window
[0x83679d4] main generic debug: using vout display module "xcb_x11"
[0x83679d4] main generic debug: TIMER module_need() : 258.340 ms - Total 258.340 ms / 1 intvls (Avg 258.340 ms)
[0x82cc68c] main video output debug: original format sz 2560x1024, of (0,0), vsz 2560x1024, 4cc RV32, sar 1:1, msk r0xff0000 g0xff00 b0xff
[0x82d5824] main spu text debug: removing module "dummy"
[0x82d5824] main spu text debug: looking for text renderer module: 1 candidate
[0x82d5824] main spu text debug: using text renderer module "dummy"
[0x82d5824] main spu text debug: TIMER module_need() : 0.137 ms - Total 0.137 ms / 1 intvls (Avg 0.137 ms)
[0xb5a00a74] main decoder debug: End of video preroll
[0xb5a00a74] main decoder debug: Received first picture
[0x83679d4] xcb_x11 generic debug: display is visible
[0x83679d4] xcb_x11 generic debug: display is visible
[0x83679d4] main generic warning: VoutDisplayEvent 'pictures invalid'
[0x83679d4] main generic debug: A filter to adapt decoder to display is needed
[0x8379e94] main filter debug: looking for video filter2 module: 18 candidates
[0x8379e94] swscale filter debug: 2560x1024 chroma: RV32 -> 1270x508 chroma: RV32 with scaling using Bicubic (good quality)
[0x8379e94] main filter debug: using video filter2 module "swscale"
[0x8379e94] main filter debug: TIMER module_need() : 3.824 ms - Total 3.824 ms / 1 intvls (Avg 3.824 ms)
[0x83679d4] main generic debug: Filter 'Swscale' (0x8379e94) appended to chain
vlc: video_output/vout_wrapper.c:202: vout_RenderWrapper: Assertion `vout_IsDisplayFiltered(vd) == !sys->display.use_dr' failed.
Aborted
(gdb) bt
[#0](https://code.videolan.org/videolan/vlc/-/issues/0)  0xb771c430 in __kernel_vsyscall ()
[#1](https://code.videolan.org/videolan/vlc/-/issues/1)  0xb74238a0 in raise () from /lib/tls/i686/cmov/libc.so.6
[#2](https://code.videolan.org/videolan/vlc/-/issues/2)  0xb7425268 in abort () from /lib/tls/i686/cmov/libc.so.6
[#3](https://code.videolan.org/videolan/vlc/-/issues/3)  0xb741c72e in __assert_fail () from /lib/tls/i686/cmov/libc.so.6
[#4](https://code.videolan.org/videolan/vlc/-/issues/4)  0xb7671fd7 in vout_RenderWrapper (vout=0x942d8ec, picture=0x94fe258) at video_output/vout_wrapper.c:202
[#5](https://code.videolan.org/videolan/vlc/-/issues/5)  0xb7665e65 in ThreadDisplayPicture (vout=0x942d8ec, now=false, deadline=0xb597e3b0) at video_output/video_output.c:732
[#6](https://code.videolan.org/videolan/vlc/-/issues/6)  0xb766624f in ThreadManage (vout=0x942d8ec, deadline=0xb597e3b0, interlacing=0xb597e3a4, postprocessing=0xb597e3b8) at video_output/video_output.c:772
[#7](https://code.videolan.org/videolan/vlc/-/issues/7)  0xb76679dc in Thread (object=0x942d8ec) at video_output/video_output.c:1237
[#8](https://code.videolan.org/videolan/vlc/-/issues/8)  0xb756050f in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
[#9](https://code.videolan.org/videolan/vlc/-/issues/9)  0xb74d9a0e in clone () from /lib/tls/i686/cmov/libc.so.6
Edited by Rémi Denis-Courmont
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information