Fixed potential segfault in vout when not using DR (close #3899).

It can happen if the vout display uses the same chroma than the video but
doesn't do the resize itself.